--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url(/css/fonts.css);
+@import url(/css/roots.css);
 html {
     scroll-behavior:smooth;
     outline: #222 solid medium;
@@ -67,23 +68,23 @@ NAV-MENU
     font-size: 13px;
     font-weight: 600;
     letter-spacing: 0.08em;
-    color: #222;
+    color: var(--color-black);
     transition: bottom,color 0.2s ease-out 50ms;
 }
 .nav-menu__li--actual{
     padding: 0.2rem;
     border-width: 1.5px 0 1.5px;
-    border-color: #146eb4;
+    border-color: var(--color-base-2);
     border-style:solid;
     transition: border, 0.2 ease-out 50ms;
 }
 .nav-menu__a:hover{
     bottom: 0.1em;
-    color: #ff9900;
+    color: var(--color-base-1);
 }
 .nav-menu__a--actual{
     bottom: 0.1em;
-    color: #ff9900;
+    color: var(--color-base-1);
 }
 /*
 BOTONES
@@ -91,7 +92,7 @@ BOTONES
 .btn{
     padding: 0.4em 2em;
     margin: 2em;
-    border: 2px solid #fefefe;
+    border: 2px solid var(--color-white);
     border-radius: 100px;
     font-weight: 600;
     cursor: pointer;
@@ -100,20 +101,20 @@ BOTONES
 }
 .btn--fill-out-white:hover{
     box-shadow: 0 0 30px 20px #fefefe60;
-    background: #fefefe;
-    color: #222;
+    background: var(--color-white);
+    color: var(--color-black);
 }
 .btn--fill-out-orange:hover{
     box-shadow: 0 0 50px 20px #f906;
-    background: #f90;
-    color: #fefefe;
+    background: var(--color-base-1);
+    color: var(--color-white);
 }
 .btn--border-orange{
-    border: 2px solid #f90;
+    border: 2px solid var(--color-base-1);
 }
 .btn--border-blue{
-    border: 2px solid #146eb4;
+    border: 2px solid var(--color-base-2);
 }
 .btn--border-black{
-    border: 2px solid #222;
+    border: 2px solid var(--color-black);
 }
