--- a/css/user.css
+++ b/css/user.css
@@ -1,44 +1,44 @@
 .section-user{
     background: image-set(url("/assets/Various/pexels-markus-winkler-1430818-11392632.jpg")) bottom / cover fixed no-repeat;
 }
-.form__container{
-    min-width: 400px;
-    margin: 0 auto;
+.form__box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
 }
-.form__text{
-    right: 0;
+#form{
+    width: 400px;
+    padding: 40px 0;
+    color: var(--color-black);
+    background: var(--color-white);
+    box-shadow: 0 0 6px 0 var(--color-base-1);
+    border-radius: 10px;
 }
-.form{
-    margin: 0;
-    background-color: #fefefe;
-    border-radius: 8px;
-    /* box-shadow: 0px 0px 80px 1px #f908; */
-}
-.form__input{
-    width: 100%;
-    border: none;
-    outline: none;
-}
-.form__line{
+.form__inputs{
     position: relative;
-    bottom: 1.5em;
-    height: 1px;
-    background-color: #000;
+    margin: 45px;
+    text-align: left;
+    background: none;
 }
-.form__label{
+input{
+    padding: 10px 10px 10px 5px;
+    color: var(--color-base-1);
+    width: 100%;
+    display: block;
+    border: none;
+    border-bottom: 1px solid var(--color-gray);
+    background: none;
+}
+input:focus{
+    outline: none;
+    color: var(--color-gray)
+}
+label{
     position: absolute;
-    bottom: 1em;
-    left: 0;
-    transform: translateY(-.5em);
-    transition: transform .5s, color .3s;
-}
-.form__btn{
-    background-color: inherit;
-}
-.form__input:not(:placeholder-shown) + .form__label,
-.form__input:focus + .form__label{
-    transform: translateY(-22px) scale(.7);
-    transform-origin: top left;
-    color: #f90;
-    text-shadow: 0 0 1px #f90;
+    bottom: 8px;
+    left: 5px;
+    color: var(--color-gray);
+    pointer-events: none;
+    transition: 0.5 ease-in-out all;
 }
