--- a/css/box-properties.css
+++ b/css/box-properties.css
@@ -8,11 +8,11 @@
     height: 100%;
     background-color: #2221;
 }
-.bg-orange{
-    background-color: #f90;
+.bg-color1{
+    background-color: var(--color-base-1);
 }
-.bg-blue{
-    background-color: #146eb4;
+.bg-color2{
+    background-color: var(--color-base-2);
 }
 .bg-white{
     background-color: var(--color-white)
