--- a/css/roots.css
+++ b/css/roots.css
@@ -1,7 +1,9 @@
 :root{
     --color-white: #fefefe;
     --color-black: #222;
-    --color-gray: #999;
-    --color-base-1: #f90;
-    --color-base-2: #146eb4;s
+    --color-gray: #4f4f4f;
+    --color-base-1: #f92;
+    --color-base-2: #146eb4;
+    --color-check-green: #37F230;
+    --color-check-red #F20F0F;
 }
